style.css
/*
COLORS:
- #FE7E7E (Pink)
- #5D271E (Red-Brown)
- #362e21 (Dark Brown)
- #FFD285 (Beige)
- #FED24C (Yellow)
*/

/* Navigation Bar */
* {
  margin:0;
  font-family: Verdana, sans-serif;
}

.navBar {
  background: #FE7E7E;
}

.navBar .logo {
  float: left;
}

@media only screen and (max-width: 6000px) {
  .navBar .logo img {
      height: auto;
      width: 250px;
  }
  .navigation {
      padding-top: 20px;
      padding-bottom: 20px;
      float: right;
      width: 600px; 
      height: auto;
      text-align: right;
      padding-right: 10px;
    }
}

@media only screen and (max-width: 875px) {
  .navBar .logo img {
      display: none;
  }
  .navigation {
      padding-top: 20px;
      padding-bottom: 20px;
      float: left;
      width: 600px;
      height: auto;
      text-align: left;
      padding-left: 10px;
      padding-right: 10px;
    }
}

.navigation a {
  padding: 5px;
  color: #FFD285;
  text-decoration: none;
  font-size: 24px;
  display: inline-block;
}

.navigation .separator {
  color: #5D271E;
  font-size: 28px;
  font-weight: lighter;
  display: inline-block;
}

.clear-floats {
  clear: both;
}

/* Common elements */
body {
  background-color: #FFD285
}

h1 {
  color: #362e21;
  font-weight: bold;
  text-align: center;
  padding: 20px;
  font-size: 45px;
}

.tagline {
  color: #362e21;
  font-weight: bold;
  font-style: italic;
  text-align: center;
  padding: 20px;
  font-size: 32px;
}

.rounded-page {
    margin: 30px;
    border-radius: 30px; 
    box-shadow: 0 0 5px;
}

@media only screen and (max-width: 6000px) { 
    #main-logo {
      width: 600px;
      height: auto;
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
}

@media only screen and (max-width: 600px) { 
    #main-logo {
      width: 450px;
      height: auto;
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
}

#browse-button {
  text-decoration: none;
  color: #FFD285;
  background-color: #FE7E7E;
  padding: 20px;
  border-radius:10px; 
  font-size: 30px;
}

#features p {
  color: #FFD285;
  text-align: center;
  padding: 10px;
  font-size: 35px;
}

.products {
  font-weight: bold;
  font-style: italic;
  text-align: center;
  font-size: 20px;
  padding-bottom: 20px;
}

@media only screen and (max-width: 6000px) { 
    .product {
      background-color: #5D271E;
      display: inline-block;
      padding:46px;
      transition:0.3s;
      border-radius: 20px;
      width: 400px;
      height:500px;
      position:relative;
      margin-left: 10px;
      margin-right: 10px;
      margin-bottom: 20px;
      box-shadow: 0 1px 15px;
    }
    .product-img {
      height:300px;
      width: auto;
/*      position: relative;*/
      bottom:20px;
    }
}

@media only screen and (max-width: 600px) { 
    .product {
      background-color: #5D271E;
      display: inline-block;
      padding:46px;
      transition:0.3s;
      border-radius: 20px;
      width: 300px;
      height:400px;
      position:relative;
      margin-left: 10px;
      margin-right: 10px;
      margin-bottom: 20px;
      box-shadow: 0 1px 15px;
    }
    .product-img {
      height:200px;
      width: auto;
    /*  position: relative;*/
      bottom:20px;
    }
}

.product h2 {
    color: #FFD285;
    position: absolute;
    top:15px;
    left:10px;
    right:10px;
}

/*
.product:hover {
  box-shadow: 0px 0px 10px #362e21;
  width: 320px;
  height: 400px;
}
*/


.product hr {
  transition:0.3s;
  margin: 10px -20px 20px;
  color: #FFD285;
  border: 0;
  border-top: 2px solid #FFD285;
}

.buy-button {
  right: 20px;
  bottom: 20px;
  position: absolute;
  background-color: transparent;
  color: #FFD285;
  border-color: #FFD285;
  border-radius: 12px;
  font-size: 25px;
  padding-left: 10px;
  padding-right: 10px;
  transition: 0.3s;
}

.buy-button:hover { 
  background-color: #FFD285;
  color: #5D271E;
  padding-left: 20px;
  padding-right: 20px;
}

.price {
  position: absolute;
  bottom: 20px;
  left: 20px;
  color: #FFD285;
  border-radius: 10px;
  border-color: #FFD285;
  border: 2px solid #FFD285;
  background-color: #FE7E7E;
  padding: 5px;
  font-weight: 100;
}

.products h4 {
    color: #FFD285;
    padding-top:5px;
    padding-left:5px;
    padding-right:10px;
    font-size: 18px;
    font-weight: normal;
}

@media only screen and (max-width: 6000px) {
    #meat {
       height:300px;
    }
    #fruits-vegs {
        height:300px;
    }
}

@media only screen and (max-width: 900px) {
    #meat {
       height:200px;
    }
    #fruits-vegs {
        height:200px;
    }
}

@media only screen and (max-width: 600px) {
    #meat {
       height:150px;
    }
    #fruits-vegs {
        height:150px;
    }
}

.footer {
    color: #FFD285;
}

/*
.page-separator {
    background: #362e21;
    width:2
}
*/

.footer a:link {
    color: #FFD285;
}

.footer a:visited {
    color: #FFD285;
}

/* Recipes page */

* { box-sizing: border-box; }


/* ---- input ---- */

.quicksearch {
    padding-left: 20px;
}

.grid {
    margin-left: 20px;
}

/* ---- Recipe search ---- */

.element-item {
/*  position: relative;*/
/*  float: left;*/
/*  width: 120px;*/
  height: 120px;
  margin: 5px;
  padding: 15px;
  color: #262524;
  text-align: center;
    margin-bottom: 50px;
/*  background: blue;*/
}

/*
.element-item > * {
  margin: 0;
  padding: 0;
}
*/

.element-item .name {
  text-transform: none;
  letter-spacing: 0;
  font-size: 15px;
  font-weight: bold;
}

.recipe-img {
    width:100px;
}

.ui-page{
    background-color: #FFD285 !important; 
}

/* Team page */
/* This tutorial helped a lot: https://www.w3schools.com/howto/howto_css_about_page.asp */

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

#team .column {
  float: left;
  width: 33.3%;
  margin-bottom: 16px;
  padding: 0 8px;
}

#team .card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 8px;
  background-color: #362e21;
  padding: 20px;
  border-radius: 20px;
}

#team .container {
  padding: 0 16px;
}

#team .container::after, #team .row::after {
  content: "";
  clear: both;
  display: table;
}

#team .title {
  color: #FFD285;
}

#team img {
    border-radius: 1000px;
    box-shadow: 0 0 10px;
}

#team h2 {
    color: #FFD285;
}

#team p {
    color: #FFD285;
    font-style: italic;
}

@media screen and (max-width: 1170px) {
  #team .column {
    width: 100%;
    display: block;
  }
}

